objects/FinServ__Alert__c.object
<CustomObject>
    <description>Represents notifications to alert personal bankers about their client accounts.</description>
    <fields>
        <fullName>FinServ__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Alerts</relationshipLabel>
        <relationshipName>Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__Claim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim</label>
        <referenceTo>Claim</referenceTo>
        <relationshipLabel>Alerts</relationshipLabel>
        <relationshipName>Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Alerts</relationshipLabel>
        <relationshipName>Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__Insurance_Policy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insurance Policy</label>
        <referenceTo>InsurancePolicy</referenceTo>
        <relationshipLabel>Alerts</relationshipLabel>
        <relationshipName>Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__MessageDescription__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Message Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__Severity__c</fullName>
        <label>Severity</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                    <default>true</default>
                    <label>Error</label>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Source System Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Alert</label>
    <listViews>
        <fullName>FinServ__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Alert-{000000000}</displayFormat>
        <label>Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alerts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>